# advent-of-c

./: .clang-tidy  .gitignore  CMakeLists.txt  README.md
data/: day_19_part_2_example_2.txt  day_19_part_2_input.txt  day_22_part_1_input.txt  day_23_part_1_input.txt  day_24_part_1_input.txt  day_25_part_1_input.txt
src/: CMakeLists.txt  main.c  mat.c  mat.h  utility.c  utility.h
src/aoc_2020/: CMakeLists.txt  day_01.c  day_01.h  day_02.c  day_02.h  day_03.c  day_03.h  day_04.c  day_04.h  day_05.c  day_05.h  day_06.c  day_06.h  day_07.c  day_07.h  day_08.c  day_08.h  day_09.c  day_09.h  day_10.c  day_10.h  day_11.c  day_11.h  day_12.c  day_12.h  day_13.c  day_13.h  day_14.c  day_14.h  day_15.c  day_15.h  day_16.c  day_16.h  day_17.c  day_17.h  day_18.c  day_18.h  day_19.c  day_19.h  day_20.c  (+11 more)
